# compute-sdk-cpp

./: CMakeLists.txt  CNAME  CONTRIBUTING.md  CONTRIBUTING_8md.html  Cargo.toml  Doxyfile  LICENSE  README.md  README_8md.html  SECURITY.md  access__bridge__internals_8h.html  access__bridge__internals_8h.js  access__bridge__internals_8h_source.html  annotated.html  annotated_dup.js  async__reqs_8cpp.html  async__reqs_8cpp.js  async_reqs_8cpp-example.html  backend_8h.html  backend_8h.js  backend_8h_source.html  body_8h.html  body_8h.js  body_8h_source.html  classes.html  classfastly_1_1_body-members.html  classfastly_1_1_body.html  classfastly_1_1_body.js  classfastly_1_1_config_store-members.html  classfastly_1_1_config_store.html  classfastly_1_1_config_store.js  classfastly_1_1_fastly_error-members.html  classfastly_1_1_fastly_error.html  classfastly_1_1_request-members.html  classfastly_1_1_request.html  classfastly_1_1_request.js  classfastly_1_1_response-members.html  classfastly_1_1_response.html  classfastly_1_1_response.js  classfastly_1_1_secret_store-members.html  (+538 more)
.cargo/: config.toml
.github/: release.yml
.github/workflows/: ci.yml  release.yml
cmake/: fastly-config.cmake
docs/html/: annotated.html  annotated_dup.js  backend_8h.html  backend_8h_source.html  body_8h.html  body_8h_source.html  classes.html  classfastly_1_1_body.js  classfastly_1_1_config_store.html  classfastly_1_1_config_store.js  classfastly_1_1_fastly_error.js  classfastly_1_1_request-members.html  classfastly_1_1_request.html  classfastly_1_1_request.js  classfastly_1_1_response-members.html  classfastly_1_1_response.html  classfastly_1_1_secret_store-members.html  classfastly_1_1backend_1_1_backend.html  classfastly_1_1backend_1_1_backend.js  classfastly_1_1backend_1_1_backend_builder-members.html  classfastly_1_1backend_1_1_backend_builder.js  classfastly_1_1device__detection_1_1_device.js  classfastly_1_1error_1_1_fastly_error-members.html  classfastly_1_1error_1_1_fastly_error.js  classfastly_1_1geo_1_1_geo-members.html  classfastly_1_1geo_1_1_geo.js  classfastly_1_1geo_1_1_utc_offset.html  classfastly_1_1geo_1_1_utc_offset.js  classfastly_1_1http_1_1_body.js  classfastly_1_1http_1_1_header_values_iter.html  classfastly_1_1http_1_1_request.js  classfastly_1_1http_1_1_response-members.html  classfastly_1_1http_1_1_response.html  classfastly_1_1http_1_1_response.js  classfastly_1_1http_1_1_streaming_body-members.html  classfastly_1_1http_1_1_streaming_body.js  classfastly_1_1http_1_1request_1_1_pending_request.html  classfastly_1_1http_1_1request_1_1_pending_request.js  classfastly_1_1secret__store_1_1_secret.html  classfastly_1_1secret__store_1_1_secret.js  (+138 more)
docs/html/search/: all_1.js  all_11.js  all_3.js  all_4.js  all_5.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_a.js  classes_b.js  classes_d.js  classes_e.js  enums_0.js  files_7.js  functions_0.js  functions_11.js  functions_12.js  functions_13.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_9.js  functions_d.js  functions_f.js  namespaces_0.js  pages_0.js  pages_2.js  pages_4.js  pages_5.js  pages_7.js  pages_9.js  related_1.js  related_5.js  (+11 more)
examples/: CMakeLists.txt  async_reqs.cpp  config_store.cpp  device_detection.cpp  echo.cpp  erl.cpp  esi.cpp  fastly.toml  ngwaf_inspect.cpp  router.cpp  streaming_response.cpp
include/fastly/: backend.h  config_store.h  device_detection.h  erl.h  error.h  esi.h  geo.h  kv_store.h  log.h  secret_store.h  security.h
include/fastly/cache/: core.h  simple.h
include/fastly/detail/: access_bridge_internals.h  rust_bridge_tags.h  rust_iterator_range.h
include/fastly/http/: body.h  header.h  http.h  method.h  purge.h  request.h  response.h  status_code.h
quickstart/: CMakeLists.txt  README.md  fastly.toml
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_f.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  (+84 more)
src/: backend.rs  cache.rs  config_store.rs  device_detection.rs  error.rs  esi.rs  geo.rs  kv_store.rs  lib.rs  log.rs  secret_store.rs  security.rs
src/cpp/: backend.cpp  backend.h  config_store.cpp  config_store.h  device_detection.cpp  device_detection.h  erl.cpp  error.cpp  error.h  esi.cpp  fastly.h  geo.cpp  geo.h  kv_store.cpp  log.cpp  log.h  secret_store.cpp  secret_store.h  security.cpp  util.h
src/cpp/cache/: core.cpp  simple.cpp
src/cpp/http/: backend.cpp  backend.h  body.cpp  body.h  header.cpp  header.h  http.h  method.h  purge.cpp  purge.h  request.cpp  request.h  response.cpp  response.h  status_code.cpp  status_code.h
src/http/: body.rs  header.rs  mod.rs  purge.rs  request.rs  response.rs  status_code.rs
test/: CMakeLists.txt  cache_core.cpp  cache_simple.cpp  config_store.cpp  erl.cpp  esi.cpp  fastly.toml  kv_store.cpp  security.cpp
