[package]
name = "fastly-sys"
version = "0.4.0"
authors = ["Kat Marchán <kat.marchan@fastly.com>"]
edition = "2024"

[dependencies]
cxx = { version = "1.0.158", features = ["c++17"] }
fastly = "0.11.4"
fastly-shared = "0.11.5"
http = "1.3.1"
log = "0.4.27"
log-fastly = "0.11.5"
thiserror = "2.0.12"
esi = "0.6.1"
quick-xml = "0.38.3"

[build-dependencies]
cxx-build = "1.0"

[lib]
crate-type = ["staticlib"]

[target.wasm32-wasip1.dependencies]
link-cplusplus = { version = "1", features = ["nothing"] }
